Modificando a estrutura do projeto, importando classes no xml, corrigindo nome da classe de plugin e js, importando jar uhf, removendo classes desnecessarias

--- a/PluginAutoid9U/package.json
+++ b/PluginAutoid9U/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "cordova-plugin-teste-plugin",
+  "name": "cordova-plugin-autoid",
   "version": "0.0.1",
   "description": "",
   "cordova": {
-    "id": "cordova-plugin-teste-plugin",
+    "id": "com.seidor.uhfrfid",
     "platforms": [
       "android"
     ]
@@ -12,6 +12,6 @@
     "ecosystem:cordova",
     "cordova-android"
   ],
-  "author": "",
+  "author": "Wellington Azevedo",
   "license": "ISC"
 }
